<resources>
    <string name="app_name">InfoManga</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario_user">Usuario</string>
    <string name="password_1234">Contraseña</string>
    <string name="ingresar">Ingresar Usuario</string>
    <string name="registrar">Registrar Usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="mostrar">Mostrar Usuarios</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="editar">Editar Usuario</string>
    <string name="textoMangas">Hola aquí deberian ir imagenes pero todavia no busco sobre los derechos de autores y como poder referenciarlos, estarán pero primero debo consultar como se hace</string>
</resources>